<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardCornerRadius="9dp"
    app:strokeColor="@android:color/holo_red_light"
    app:strokeWidth="2dp"
    android:layout_marginStart="1.5dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/buttonBackGround"
       >

        <ImageView
            android:id="@+id/item_done_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_date_new"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="13dp"
        />
        <TextView
            android:id="@+id/item_name_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@id/item_date_new"
           android:layout_alignParentStart="true"
            android:text="@string/newname"
            android:textStyle="bold|italic"
            android:textColor="#CFC7C7"
            android:textSize="19sp"
             />

            <TextView
                android:id="@+id/item_type_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
             android:layout_marginStart="10dp"
                android:layout_below="@id/item_name_new"


                android:text="@string/newtype"
                android:textAlignment="gravity"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="17sp" />


        <TextView
            android:id="@+id/item_price_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name_new"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="39dp"
            android:gravity="center"

            android:text="@string/newprice"

            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/item_date_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/item_price_new"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="15dp"

            android:textStyle="bold"
            android:text=""/>

        <TextView
            android:id="@+id/item_order_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/item_date_new"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>